<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bilans"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ergo.ppe_android11.BilansActivity"
    tools:showIn="@layout/activity_bilans"
    android:background="@drawable/back1"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/backto"
                    android:id="@+id/backtofirsti"
                    android:background="@drawable/backto"
                    android:gravity="center" />

                <TextView
                    android:text="BILANS"
                    android:layout_alignParentTop="true"
                    android:id="@+id/bilanstxt"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Snow"
                    android:textSize="36sp"
                    android:layout_marginLeft="70dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/asup"
                    android:layout_gravity="center"
                    android:text="a changer" />

                <CalendarView
                    android:layout_width="304dp"
                    android:layout_height="271dp"
                    android:layout_gravity="center"
                    android:id="@+id/calendarBilan"/>

                <TextView
                    android:text="@string/bilandu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/titrebilandujour"
                    android:gravity="bottom" />
                <TextView
                    android:text="@string/bilans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bilandujour" />
            </LinearLayout>

            <TextView
                android:text="@string/votredos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Black"
                android:gravity="center"
                android:id="@+id/titremodelisationdos"
                tools:text="@string/dos"
                android:textColor="@color/Snow"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/modelisationdos"
                android:background="@drawable/face">

                <TextView
                    android:text="Haut gauche"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/hg"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:padding="8dp"
                    android:layout_margin="3dp"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/redt"
                    android:textColor="@color/Snow"
                    />
                <TextView
                    android:text="Haut Droite"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/hd"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:padding="8dp"
                    android:layout_margin="3dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/orangeredt"
                    android:textColor="@color/Snow"/>
                <TextView
                    android:text="Milieu gauche"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/mg"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_margin="3dp"
                    android:layout_marginLeft="65dp"
                    android:background="@color/orangeredt"
                    android:textColor="@color/Snow"
                    />
                <TextView
                    android:text="Milieu Droite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/md"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:padding="8dp"
                    android:layout_margin="3dp"
                    android:background="@color/potiront"
                    android:textColor="@color/Snow"/>

                <TextView
                    android:text="Bas"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/b"
                    android:layout_row="2"
                    android:padding="8dp"
                    android:layout_marginLeft="65dp"
                    android:background="@color/yellowt"
                    android:textColor="@color/Snow"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginBottom="100dp"
                    android:layout_margin="3dp"/>
            </GridLayout>
            <TextView
            android:text="@string/assise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:background="@color/Black"
            android:id="@+id/titremodelisation1"
            android:gravity="center"
            android:textColor="@color/Snow"
                tools:text="@string/dos" />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/modelisation1"
                android:background="@drawable/assise">




                <TextView
                    android:text="@string/arga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/arriere"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:padding="13dp"
                    android:layout_margin="2dp"
                    android:layout_marginTop="82dp"
                    android:background="@color/yellowt"
                    android:textColor="@color/Snow"/>


                <TextView
                    android:text="@string/ardr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/droite"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:padding="13dp"
                    android:layout_margin="2dp"

                    android:background="@color/potiront"
                    android:textColor="@color/Snow"
                    />
                <TextView
                    android:text="@string/avga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gauche"
                    android:layout_row="1"
                    android:layout_marginLeft="57dp"
                    android:padding="13dp"
                    android:layout_margin="2dp"
                    android:background="@color/redt"
                    android:textColor="@color/Snow"
                    android:layout_column="0"/>
                <TextView
                    android:text="@string/avdr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/avant"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:padding="13dp"
                    android:layout_margin="2dp"

                    android:background="@color/orangeredt"
                    android:textColor="@color/Snow"/>
            </GridLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
